# Valbak

./: Cargo.toml  LICENSE  README.md
src/: backup.rs  file.rs  main.rs  main_win.rs  settings.rs  settings_win.rs  watcher.rs  win_common.rs
