[package]
name = "valbak"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
directories = "^4.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
dirs = "^4.0"
anyhow = "1.0"
thiserror = "1.0.30"
