[package]
name = "valbak"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic="abort"
[profile.release]
panic="abort"
[profile.test]
panic="abort"
[profile.bench]
panic="abort"

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
directories = "^4.0"
dirs = "^4.0"
anyhow = "1.0"
thiserror = "1.0.30"
glob = "0.3.0"
notify = "4.0.17"
chrono = "0.4.19"
filetime = "0.2"
multimap = "0.8.3"